fix: dark mode works on safari

--- a/website/src/assets/styles/tailwind.css
+++ b/website/src/assets/styles/tailwind.css
@@ -56,7 +56,7 @@ limitations under the License.
   }
 
   .dark {
-    --background: 0 0% 0;
+    --background: 0 0% 0%;
     --foreground: 0 0% 100%;
 
     --card: 0 0% 3.9%;
